--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                         <i class="bx bx-phone-call contact_icon"></i>
                         <div>
                             <h3 class="contact-title">Call Me</h3>
-                            <span class="contact-subtitle"><a href="tel:+91-8838767837">+92-3084821803</a></span>
+                            <span class="contact-subtitle"><a href="tel:+923084821803">+92-3084821803</a></span>
                         </div>
                     </div>
                     <div class="contact-information">
@@ -749,7 +749,7 @@
                         <div>
                             <h3 class="contact-title">Email</h3>
                             <span class="contact-subtitle"><a
-                                    href="mailto:harrishpt@gmail.com">codebyhassan@gmail.com</a></span>
+                                    href="codebyhassan@gmail.com">codebyhassan@gmail.com</a></span>
                         </div>
                     </div>
                     <div class="contact-information">
