--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django Developer - Hassan Afzal </title>
     <meta name="description"
         content="Hassan Afzal showcasing projects in Django development and web application design.">
     <meta name="keywords"
-        content="Harrish P T, HarrishPT, Harris, ptharrish, harishpt, Harish, Harish PT,hari, ptharish, Django developer, web developer, portfolio, Minebea Intec, Harrish portfolio, Harrish Minebea Intec,">
+        content="Hassan Afzal, Django developer, web developer, portfolio, Minebea Intec, Hassan afzal portfolio, hassan afzal developer,">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -760,20 +761,24 @@
                         </div>
                     </div>
                 </div>
-                <form action="" class="contact-form grid" data-aos="fade-down" data-aos-delay="450">
+                <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DgK000006qLXx" class="contact-form grid" data-aos="fade-down" data-aos-delay="450">
                     <div class="contact-inputs grid">
                         <div class="contact-content">
                             <label for="" class="contact-label">Name :</label>
-                            <input type="text" placeholder="Enter Your Name" id="name" class="contact-input">
+                            <input type="text" name="first_name" placeholder="Enter Your Name" id="name" class="contact-input">
                         </div>
                         <div class="contact-content">
                             <label for="" class="contact-label">Email :</label>
-                            <input type="email" placeholder="Enter Your Email address" id="email" class="contact-input">
+                            <input type="email" name='email' placeholder="Enter Your Email address" id="email" class="contact-input">
+                        </div>
+                        <div class="contact-content">
+                            <label for="" class="contact-label">Company Name</label>
+                            <input type="text" name='company' placeholder="Enter Your Company Name" id="email" class="contact-input">
                         </div>
                     </div>
                     <div class="contact-content">
                         <label for="" class="contact-label">Message :</label>
-                        <textarea name="" id="" cols="0" rows="5" placeholder="Enter Your Message"
+                        <textarea name="description" id="" cols="0" rows="5" placeholder="Enter Your Message"
                             class="contact-input"></textarea>
                     </div>
                     <div>
