--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                             class="contact-input"></textarea>
                     </div>
                     <div>
-                        <a href="#" class="button button--flex">Send Message <i class="bx bx-send button__icon"></i></a>
+                        <a type='submit' class="button button--flex">Send Message <i class="bx bx-send button__icon"></i></a>
                     </div>
                 </form>
             </div>
