--- a/index.html
+++ b/index.html
@@ -781,9 +781,12 @@
                         <textarea name="description" id="" cols="0" rows="5" placeholder="Enter Your Message"
                             class="contact-input"></textarea>
                     </div>
+     
                     <div>
-                        <button type='submit' class="button button--flex">Send Message <i class="bx bx-send button__icon"></i></button>
-                    </div>
+
+                        <button type='submit'>Submit </button>
+<!--                         <button type='submit' class="button button--flex">Send Message <i class="bx bx-send button__icon"></i></button>
+                    </div> -->
                 </form>
             </div>
 
@@ -845,12 +848,12 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Harrish P T",
-      "url": "https://ptharrish.github.io/portfolio/",
+      "name": "Hassan Afzal",
+      "url": "https://chuhan57.github.io/portfolio/#",
       "jobTitle": "Django Developer",
       "worksFor": {
         "@type": "Organization",
-        "name": "Minebea Intec Bengaluru"
+        "name": "nawlabs"
       }
     }
     </script>
