--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                         </div>
                     </div>
                 </div>
-                <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DgK000006qLXx" class="contact-form grid" data-aos="fade-down" data-aos-delay="450">
+<!--                 <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DgK000006qLXx" class="contact-form grid" data-aos="fade-down" data-aos-delay="450">
                     <div class="contact-inputs grid">
                         <div class="contact-content">
                             <label for="" class="contact-label">Name :</label>
@@ -787,7 +787,44 @@
                         <button type='submit'>Submit </button>
 <!--                         <button type='submit' class="button button--flex">Send Message <i class="bx bx-send button__icon"></i></button>
                     </div> -->
-                </form>
+                </form> -->
+
+
+
+                <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DgK000006qLXx"
+    method="POST" class="contact-form grid" data-aos="fade-down" data-aos-delay="450">
+
+    <!-- Hidden Fields Required by Salesforce -->
+    <input type="hidden" name="oid" value="00DgK000006qLXx">
+    <input type="hidden" name="retURL" value="https://chuhan57.github.io/portfolio/">
+
+    <!-- Contact Inputs Grid -->
+    <div class="contact-inputs grid">
+        <div class="contact-content">
+            <label for="first_name" class="contact-label">Name :</label>
+            <input type="text" id="first_name" name="first_name" placeholder="Enter Your Name" class="contact-input" maxlength="40">
+        </div>
+
+        <div class="contact-content">
+            <label for="email" class="contact-label">Email :</label>
+            <input type="email" id="email" name="email" placeholder="Enter Your Email address" class="contact-input" maxlength="80">
+        </div>
+
+        <div class="contact-content">
+            <label for="company" class="contact-label">Company Name</label>
+            <input type="text" id="company" name="company" placeholder="Enter Your Company Name" class="contact-input" maxlength="40">
+        </div>
+    </div>
+
+    <div class="contact-content">
+        <label for="description" class="contact-label">Message :</label>
+        <textarea name="description" id="description" cols="0" rows="5" placeholder="Enter Your Message" class="contact-input"></textarea>
+    </div>
+
+    <div>
+        <button type="submit">Submit</button>
+    </div>
+</form>
             </div>
 
         </section>
